--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,18 @@ body {
 }
 
 .container {
+  position: relative;
   max-width: 960px;
   margin: 0 auto;
+  height: 200vh;
+  background: gainsboro;
+}
+
+.navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3em;
+  background-color: blue;
 }
