--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
 body {
+  font-family: Roboto;
   background-color: #beeeef;
 }
 
@@ -15,6 +18,43 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 3em;
+  height: 110px;
   background-color: blue;
+}
+
+.navButtons {
+  padding: 25px 5px 5px 0;
+  background: pink;
+  margin: 0 auto;
+  width: 960px;
+}
+
+.button {
+  border-style: none;
+  padding: 0;
+  margin-top: 5px;
+  box-shadow: 2px 2px 2px;
+  width: 145px;
+  height: 65px;
+  border-radius: .25em;
+  vertical-align: top;
+}
+
+.button:hover {
+  cursor: pointer;
+
+}
+
+.button img {
+  height: 90%;
+}
+
+.container {
+  margin-top: 110px;
+}
+
+.heading {
+  font-size: 4em;
+  width: 740px;
+  margin: 0 auto;
 }
