--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ body {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
+  z-index: 5;
   top: 0;
   left: 0;
   width: 100%;
@@ -22,11 +23,16 @@ body {
   background-color: blue;
 }
 
+.on-the-side {
+  width: 160px;
+  height: 100%;
+}
+
 .navButtons {
   padding: 25px 5px 5px 0;
   background: pink;
   margin: 0 auto;
-  width: 960px;
+  max-width: 960px;
 }
 
 .button {
@@ -40,21 +46,42 @@ body {
   vertical-align: top;
 }
 
+.to-top {
+  display: none;
+}
+
 .button:hover {
   cursor: pointer;
-
+  margin-top: 6px;
+  margin-left: 1px;
+  box-shadow: 1px 1px 1px;
 }
 
 .button img {
-  height: 90%;
+  margin-top: 10px;
+  height: 40px;
+  transform: rotate(180deg);
 }
 
 .container {
   margin-top: 110px;
 }
 
-.heading {
+.typed-heading {
   font-size: 4em;
   width: 740px;
   margin: 0 auto;
+}
+
+.content {
+  display: none;
+}
+
+.heading {
+  font-size: 4em;
+}
+
+.heading h1 {
+  margin: 0 auto;
+  
 }
