--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
 
 body {
   font-family: Roboto;
-  background-color: #beeeef;
+  background-color: #eee;
 }
 
 .container {
@@ -10,7 +11,7 @@ body {
   max-width: 960px;
   margin: 0 auto;
   height: 200vh;
-  background: gainsboro;
+  /*background: gainsboro;*/
 }
 
 .navbar {
@@ -20,7 +21,7 @@ body {
   left: 0;
   width: 100%;
   height: 110px;
-  background-color: blue;
+  /*background-color: blue;*/
 }
 
 .on-the-side {
@@ -30,7 +31,7 @@ body {
 
 .navButtons {
   padding: 25px 5px 5px 0;
-  background: pink;
+  /*background: pink;*/
   margin: 0 auto;
   max-width: 960px;
 }
@@ -68,8 +69,8 @@ body {
 }
 
 .typed-heading {
-  font-size: 4em;
-  width: 740px;
+  font-family: 'Press Start 2P';
+  font-size: 35px;
   margin: 0 auto;
 }
 
@@ -82,7 +83,56 @@ body {
   text-align: center;
 }
 
+.heading h1 {
+  margin: 50px 0 0 0;
+}
+
+.main-segment {
+  box-shadow: 4px 4px 18px #ccc;
+  margin-top: 100px;
+  border-radius: 10px;
+  font-size: 30px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
 .contact-details {
   display: inline-block;
-  width: 48%;
+  width: 49%;
+}
+
+.contact-icon {
+  height: 30px;
+  margin-right: 10px;
+  margin-left: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.skill-row {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.skill {
+  display: inline-block;
+  width: 24.4%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.skill3 {
+  background: yellow;
+  display: inline-block;
+  width: 33%;
+  text-align: center;
+}
+
+.skills-img {
+  height: 100px;
 }
