added click listeners

--- a/css/main.css
+++ b/css/main.css
@@ -76,15 +76,14 @@ body {
 
 .content {
   display: none;
+  position: relative;
+  padding-top: 50px;
 }
 
 .heading {
   font-size: 4em;
   text-align: center;
-}
-
-.heading h1 {
-  margin: 50px 0 0 0;
+  margin-top: 50px;
 }
 
 .main-segment {
