--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: Roboto;
-  background-color: #eee;
+  background-color: #beeeef;
 }
 
 .container {
@@ -11,7 +11,6 @@ body {
   max-width: 960px;
   margin: 0 auto;
   height: 200vh;
-  /*background: gainsboro;*/
 }
 
 .navbar {
@@ -21,8 +20,12 @@ body {
   left: 0;
   width: 100%;
   height: 110px;
-  /*background-color: blue;*/
+  background-color: #333;
 }
+
+
+
+
 
 .on-the-side {
   width: 160px;
@@ -31,9 +34,20 @@ body {
 
 .navButtons {
   padding: 25px 5px 5px 0;
-  /*background: pink;*/
   margin: 0 auto;
   max-width: 960px;
+}
+
+.shrunken {
+  height: 60px;
+}
+
+.shrunken .navButtons {
+  padding-top: 0;
+}
+
+.shrunken button {
+  height: 50px;
 }
 
 .button {
@@ -60,7 +74,7 @@ body {
 
 .button img {
   margin-top: 10px;
-  height: 40px;
+  height: 35px;
   transform: rotate(180deg);
 }
 
@@ -87,15 +101,25 @@ body {
 }
 
 .main-segment {
+  background-color: #eee;
+  padding: 15px;
   box-shadow: 4px 4px 18px #ccc;
   margin-top: 100px;
   border-radius: 10px;
   font-size: 30px;
 }
 
+h2 {
+  margin: 0 0 40px 0;
+}
+
 p {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+
+.last {
+  margin-bottom: 0;
 }
 
 .contact-details {
@@ -132,6 +156,42 @@ a {
   text-align: center;
 }
 
+h3 {
+  margin: 0 0 20px 0;
+}
+
 .skills-img {
   height: 100px;
+}
+
+.project {
+  margin-top: 50px;
+}
+
+.project-heading {
+  margin: 0 0 10px 40px;
+}
+
+.project-left, .project-right {
+  height: 155px;
+  width: 49%;
+  display: inline-block;
+}
+
+.project-right {
+  padding-top: 5px;
+  text-align: center;
+}
+
+.project-right img {
+  height: 150px;
+  margin: 0 auto;
+}
+
+.project-details {
+  margin: 0 0 20px 80px;
+}
+
+.tech-logo {
+  height: 40px;
 }
