--- a/css/main.css
+++ b/css/main.css
@@ -21,33 +21,30 @@ body {
   width: 100%;
   height: 110px;
   background-color: #333;
-}
-
-
-
-
-
-.on-the-side {
-  width: 160px;
-  height: 100%;
+  display: none;
+  transition: all 0.5s ease;
 }
 
 .navButtons {
   padding: 25px 5px 5px 0;
   margin: 0 auto;
   max-width: 960px;
+  transition: all 0.5s ease;
 }
 
 .shrunken {
   height: 60px;
+  transition: all 0.5s ease;
 }
 
 .shrunken .navButtons {
   padding-top: 0;
+  transition: all 0.5s ease;
 }
 
 .shrunken button {
   height: 50px;
+  transition: all 0.5s ease;
 }
 
 .button {
@@ -55,9 +52,9 @@ body {
   padding: 0;
   margin-top: 5px;
   box-shadow: 2px 2px 2px;
-  width: 145px;
+  width: 185px;
   height: 65px;
-  border-radius: .25em;
+  border-radius: 5px;
   vertical-align: top;
 }
 
@@ -85,7 +82,8 @@ body {
 .typed-heading {
   font-family: 'Press Start 2P';
   font-size: 35px;
-  margin: 0 auto;
+  margin: 335px auto;
+
 }
 
 .content {
@@ -105,7 +103,7 @@ body {
   padding: 15px;
   box-shadow: 4px 4px 18px #ccc;
   margin-top: 100px;
-  border-radius: 10px;
+  border-radius: 5px;
   font-size: 30px;
 }
 
@@ -166,6 +164,7 @@ h3 {
 
 .project {
   margin-top: 50px;
+  margin-bottom: 75px;
 }
 
 .project-heading {
@@ -194,4 +193,11 @@ h3 {
 
 .tech-logo {
   height: 40px;
+}
+
+footer {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 10px;
+  display: none;
 }
