--- a/css/main.css
+++ b/css/main.css
@@ -19,15 +19,15 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 110px;
+  height: 95px;
   background-color: #333;
   display: none;
-  transition: all 0.75s ease;
+  transition: all 1s ease;
 }
 
 .navButtons {
   text-align: center;
-  padding: 25px 5px 5px 0;
+  padding: 10px 0 10px 0;
   margin: 0 auto;
   max-width: 960px;
   transition: all 1s ease;
@@ -49,6 +49,7 @@ body {
   border-style: none;
   padding: 0;
   margin-top: 5px;
+  margin-bottom: 5px;
   box-shadow: 2px 2px 2px;
   width: 185px;
   height: 65px;
@@ -57,10 +58,16 @@ body {
   transition: all 0.5s ease;
 }
 
+.to-top {
+  width: 0;
+  display: none;
+  transition: all 0.5s ease;
+}
+
 .button:hover {
   cursor: pointer;
   margin-top: 6px;
-  margin-left: 1px;
+  /*margin-left: 1px;*/
   box-shadow: 1px 1px 1px;
 }
 
