--- a/css/main.css
+++ b/css/main.css
@@ -19,30 +19,17 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 95px;
+  height: 60px;
   background-color: #333;
   display: none;
-  transition: all 1s ease;
 }
 
 .navButtons {
   text-align: center;
-  padding: 10px 0 10px 0;
+  padding: 0;
   margin: 0 auto;
   max-width: 960px;
-  transition: all 1s ease;
-}
-
-.shrunken {
-  height: 60px;
-}
-
-.shrunken .navButtons {
-  padding-top: 0;
-}
-
-.shrunken button {
-  height: 50px;
+  transition: all 0.5s ease;
 }
 
 .button {
@@ -52,16 +39,27 @@ body {
   margin-bottom: 5px;
   box-shadow: 2px 2px 2px;
   width: 185px;
-  height: 65px;
+  height: 50px;
   border-radius: 5px;
   vertical-align: top;
-  transition: all 0.5s ease;
 }
 
 .to-top {
-  width: 0;
+  width: 80px;
   display: none;
   transition: all 0.5s ease;
+}
+
+.at-top {
+  width: 0;
+  transition: all 0.5s ease;
+}
+
+.up-arrow {
+  display: none;
+  margin-top: 5px;
+  height: 35px;
+  transform: rotate(180deg);
 }
 
 .button:hover {
@@ -69,13 +67,6 @@ body {
   margin-top: 6px;
   /*margin-left: 1px;*/
   box-shadow: 1px 1px 1px;
-}
-
-.button img {
-  display: none;
-  margin-top: 5px;
-  height: 35px;
-  transform: rotate(180deg);
 }
 
 .container {
